feat: add activity overlay

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
     <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
     <!-- ESRI plugin for base layers -->
     <script src="https://cdn.jsdelivr.net/npm/esri-leaflet@2.3.3/dist/esri-leaflet.js"></script>
+    <!-- PapaParse -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <!-- JavaScript for Image Carousel Popup -->
     <script
       type="text/javascript"
@@ -79,6 +81,6 @@
     ></script>
     <!-- Main JavaScript -->
     <script type="text/javascript" src="static/js/app.js"></script>
-    
+
   </body>
 </html>
