refactor: separate overlays.js from app.js

--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
     <link rel="stylesheet" type="text/css" href="static/css/style.css" />
   </head>
   <body>
-
-
     <!-- map div - the entire body of the page -->
     <div id="map"></div>
-
-
 
     <!-- photo carousel for popups -->
     <template id="carousel-template">
@@ -54,14 +50,16 @@
       </div>
     </template>
 
-
     <!-- Font Awesome Icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <!-- Material Design Icons -->
-    <link href="https://cdn.materialdesignicons.com/6.5.95/css/materialdesignicons.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.materialdesignicons.com/6.5.95/css/materialdesignicons.min.css"
+      rel="stylesheet"
+    />
     <!-- Leaflet JS -->
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
@@ -81,8 +79,9 @@
       type="text/javascript"
       src="static/js/image-carousel-popup.js"
     ></script>
+    <!-- JavaScript for Markers -->
+    <script type="text/javascript" src="static/js/overlays.js"></script>
     <!-- Main JavaScript -->
     <script type="text/javascript" src="static/js/app.js"></script>
-
   </body>
 </html>
